--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "jiannei/laravel-response": "^4.0",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "mews/captcha": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
