Feat: install and configure opcodesio/log-viewer dependency

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # 控制验证码是否生效
 CAPTCHA_DISABLE=false
+# 控制日志log-viewer是否生效
+LOG_VIEWER_ENABLED=true
