--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "mews/captcha": "^3.3"
+        "mews/captcha": "^3.3",
+        "opcodesio/log-viewer": "^3.10"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
