Feat: install and configure paquettg/php-html-parser dependency

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "mews/captcha": "^3.3",
-        "opcodesio/log-viewer": "^3.10"
+        "opcodesio/log-viewer": "^3.10",
+        "paquettg/php-html-parser": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
