--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "jiannei/laravel-enum": "^3.0",
         "jiannei/laravel-response": "^4.0",
         "laravel/framework": "^8.75",
+        "laravel/horizon": "^5.22",
         "laravel/sanctum": "^2.11",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.5",
