--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,13 @@
         "jiannei/laravel-response": "^4.0",
         "laravel/framework": "^8.75",
         "laravel/horizon": "^5.22",
-        "laravel/sanctum": "^2.11",
+        "laravel/sanctum": "^2.15",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.5",
         "mews/captcha": "^3.3",
         "opcodesio/log-viewer": "^3.10",
         "overtrue/laravel-wechat": "7.0",
-        "paquettg/php-html-parser": "^2.2",
-        "tymon/jwt-auth": "^1.0@dev"
+        "paquettg/php-html-parser": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -71,7 +70,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "ext-pcntl": "0",
+            "ext-posix": "0"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
